fix CSS problems with urls

--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
   width: 800px;
   height: 480px;
 
-  background: url(../img/main-background.png) no-repeat;
+  background: url(img/main-background.png) no-repeat;
 }
 
 .game-menu__title {
@@ -110,7 +110,7 @@ body {
   height: 480px;
   overflow: hidden;
 
-  background: url(../img/background-dark.png) no-repeat;
+  background: url(img/background-dark.png) no-repeat;
   background-size: cover;
 }
 /*                              End Main game screen style                   */
@@ -153,7 +153,7 @@ body {
 .message--fire {
   width: 116px;
   height: 68px;
-  background: url(../img/fire-right.png) no-repeat;
+  background: url(img/fire-right.png) no-repeat;
   left: 60%;
 }
 
@@ -280,7 +280,7 @@ body {
   width: 800px;
   height: 480px;
 
-  background: url(../img/main-background.png) no-repeat;
+  background: url(img/main-background.png) no-repeat;
 }
 
 .win-screen__title {
@@ -311,7 +311,7 @@ body {
 }
 
 .gunman-level-1 {
-  background: url(../img/gunman.png) 0 0;
+  background: url(img/gunman.png) 0 0;
   animation: gunman-level-1__walk 1s steps(3) infinite;
 }
 
