--- a/style.css
+++ b/style.css
@@ -1,9 +1,7 @@
-
 body {
-  background: #000;
+  background: black;
   font-family: "PressStart2P";
 }
-
 
 /*                              Game menu style                             */
 .game-menu {
@@ -204,7 +202,7 @@ body {
 .time-panel__gunman,
 .time-panel__you {
   font-family: "Digital-7";
-  font-size: 65px;
+  font-size: 55px;
 }
 
 .time-panel__you  {
@@ -377,3 +375,21 @@ body {
 }
 /*                              Gunman style                                 */
 
+.game-screen {
+  display: none;
+  position: fixed;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate3d(-50%, -50%, 0);
+  -moz-transform: translate3d(-50%, -50%, 0);
+  transform: translate3d(-50%, -50%, 0);
+  box-sizing: border-box;
+  width: 800px;
+  height: 480px;
+  overflow: hidden;
+  background: url(/img/background-dark.png) no-repeat;
+  background-size: cover;
+}
+.game-screen--death {
+  animation: 4s player-death linear;
+}
