--- a/style.css
+++ b/style.css
@@ -446,16 +446,18 @@ body {
 }
 
 .gunman-level-3__shooting {
-  animation: gunman-level-3__duel 1s steps(3);
+  animation: gunman-level-3__duel 0.5s steps(3);
   animation-iteration-count: 1;
-  background-position: -455px -578px;
+  /*background-position: -455px -578px;*/
+  background-position: -330px -578px;
+  width: 120px;
   left: 340px;
 }
 
 .gunman-level-3__death {
-  animation: gunman-level-3__death 0.5s steps(4);
-  background-position: -822px -578px;
-  width: 130px;
+  animation: gunman-level-3__death 1s steps(1);
+  background-position: -945px -578px;
+  width: 100px;
   left: 340px;
 }
 
@@ -470,20 +472,140 @@ body {
 
 @keyframes gunman-level-3__duel {
   from {
-    background-position: -822px -578px;
+    background-position: -330px -578px;
   }
   to {
-    background-position: -710px -578px;
+    background-position: -690px -578px;
   }
 }
 
 @keyframes gunman-level-3__death {
   from {
-    background-position: -690px -578px;
+    background-position: -840px -578px;
   ;
   }
   to {
-    background-position: -822px -578px;
+    background-position: -940px -578px;
+  }
+}
+
+.gunman-level-4 {
+  height: 260px;
+  background: url(img/gunman.png) 0 -910px;
+  animation: gunman-level-4__walk 1s steps(3) infinite;
+}
+
+.gunman-level-4__standing {
+  background-position: 0 -910px;
+}
+
+.gunman-level-4__ready {
+  background-position: -400px -912px;
+}
+
+.gunman-level-4__shooting {
+  animation: gunman-level-4__duel 1s step-start;
+  animation-iteration-count: 1;
+  background-position: -665px -910px;
+  left: 340px;
+}
+
+.gunman-level-4__death {
+  animation: gunman-level-4__death 0.5s steps(1);
+  background-position: -1067px -910px;
+  width: 130px;
+  left: 340px;
+}
+
+@keyframes gunman-level-4__walk {
+  from {
+    background-position: 0 -910px;
+  }
+  to {
+    background-position: -396px -910px;
+  }
+}
+
+@keyframes gunman-level-4__duel {
+  0% {
+    background-position: -405px -910px;
+  }
+  33% {
+    background-position: -535px -910px;
+  }
+  66% {
+    background-position: -665px -910px;
+  }
+}
+
+@keyframes gunman-level-4__death {
+  from {
+    background-position: -937px -910px;
+  }
+  to {
+    background-position: -1067px -910px;
+  }
+}
+
+.gunman-level-5 {
+  height: 290px;
+  width: 135px;
+  background: url(img/gunman.png) 0 -1170px;
+  animation: gunman-level-5__walk 1s steps(3) infinite;
+}
+
+.gunman-level-5__standing {
+  background-position: 0 -1170px;
+}
+
+.gunman-level-5__ready {
+  background-position: -390px -1184px;
+}
+
+.gunman-level-5__shooting {
+  animation: gunman-level-5__duel 1s step-start;
+  animation-iteration-count: 1;
+  width: 130px;
+  background-position: -650px -1170px;
+  left: 340px;
+}
+
+.gunman-level-5__death {
+  animation: gunman-level-5__death 0.5s steps(1);
+  background-position: -1168px -1170px;
+  width: 100px;
+  left: 340px;
+}
+
+@keyframes gunman-level-5__walk {
+  from {
+    background-position: 0 -1170px;
+  }
+  to {
+    background-position: -396px -1170px;
+  }
+}
+
+@keyframes gunman-level-5__duel {
+  0% {
+    background-position: -400px -1170px;
+  }
+  33% {
+    background-position: -525px -1170px;
+  }
+  66% {
+    background-position: -650px -1170px;
+  }
+}
+
+@keyframes gunman-level-5__death {
+  from {
+    background-position: -1038px -1170px;
+    width: 130px;
+  }
+  to {
+    background-position: -1168px -1170px;
+    width: 100px;
   }
 }
 
