--- a/style.css
+++ b/style.css
@@ -79,12 +79,11 @@ body {
 }
 
 .button:hover {
-  /*color: #000;*/
   color: white;
 }
 
 .button:active {
-  color: #000;
+  color: white;
 }
 /*                              End Buttons style                           */
 
